Updated progress report
Corrected grammatical error

--- a/Progress report/Progress report.tex
+++ b/Progress report/Progress report.tex
@@ -124,7 +124,7 @@ For iterations $k = 1,...,K$, the following process was done.
 \end{enumerate}
 
 \section{Timeline of future work}
-Here is a timeline on how the project will progress in Semester 2 after the progress report has been submitted. 
+Here is a timeline of how the project will progress in Semester 2 after the progress report has been submitted. 
 \begin{itemize}
 	\item Week 2 - 3, complete second approach
 	\item Week 4 - 5, compare results of both approaches
